--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -221,8 +221,8 @@ input.error {
 }
 
 .party-button.selected.independent {
-  background: #9B59B6;
-  border-color: #9B59B6;
+  background: #fbdf54;
+  border-color: #ffca46;
 }
 
 .submit-button {
